clang/test/BSC/Negative/Generic/Typealias/typealias_in_member_func/typealias_in_member_func.cbs
// RUN: %clang_cc1  -verify %s

struct S<T> {};
typedef MyS<T> = struct S<T>;
typedef MyS_int = struct S<int>;

void MyS<T>::foo(This* this) {} //expected-error{{extended type of a BSC member function cannot be a generic typealias}}

void MyS_int::foo(This* this) {} //expected-error{{extended type of a BSC member function cannot be an instantiated type}}

int main() {
    return 0;
}